Change colors and backgrounds. Fix card spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,29 @@
 * {
     margin: 0;
+    padding: 0;
     font-family: 'Rubik', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    font-size: 18px;
-    
+    font-size: 16px;
+    box-sizing: border-box;
+    text-align: center;
+    color: #FFFFFF;
 }
 
 body {
-    background-color: #1E3C3C;
+    /* background-color: #1E3C3C; */
+}
+
+h2 {
+    font-size: 36px;
+    font-family:  'Eczar', serif;
+    text-shadow: 1px 2px 5px #272727;
 }
 
 nav {
     width: 100%;
     padding: 0 .5rem;
-    background-color: #F4B551;
-    margin-bottom: 2%;
+    background-color: #000000;
 }
 
 nav ul {
@@ -25,8 +33,6 @@ nav ul {
     max-width: 1500px;
     margin: 0 auto;
     padding: 0;
-
-
 }
 
 nav ul li {
@@ -34,38 +40,36 @@ nav ul li {
     position: relative;
     padding: .8rem;
     transition: 0.5s;
-
-
 }
 
 nav ul li a {
     text-decoration: none;
     padding: .5rem 1rem;
-    color: #000000;
-
-
+    color: #FFFFFF;
 }
 
 #name {
     font-family: 'Eczar', serif;
     font-size: 2rem;
+    color: #FFFFFF;
 }
-
-
 
 .item {
     font-size: 1.5rem;
     border-radius: .5rem;
-    text-shadow: 1px 1px 2px #6E6E6E;
+    /* text-shadow: 1px 1px 2px #FFFFFF; */
 }
+
 #left {
     margin-left: auto;
 }
+
 .flag-box {
     display: none;
     justify-content: center;
     align-items: center;
 }
+
 .flag {
     padding: 0;
 }
@@ -74,16 +78,21 @@ nav ul li a {
     nav {
         width: 100%;
     }
+
     nav ul {
         max-width: 90%;
         display: block;
     }
+
     nav ul li {
         padding: .7rem
     }
 
     .item {
         font-size: 1.3rem;
+        text-align: center;
+    }
+    .name {
         text-align: center;
     }
 }
@@ -96,19 +105,23 @@ nav ul li a {
 }
 
 @media(hover:hover) and (pointer:fine) {
-    #name:hover, .item:hover {
+
+    #name:hover,
+    .item:hover {
         background-color: #FBDD9D;
         text-shadow: 1px 2px #4F4E28,
-                     -1px 2px 3px #4F4E28;
+            -1px 2px 3px #4F4E28;
         /* padding: 1.2rem .6rem; */
     }
 }
 
 @media(hover:none) and (pointer: coarse) {
-    #name:active, .item:active {
+
+    #name:active,
+    .item:active {
         background-color: #FBDD9D;
         text-shadow: 1px 2px #4F4E28,
-                     -1px 2px 3px #4F4E28;
+            -1px 2px 3px #4F4E28;
         /* padding: 1.2rem .6rem; */
     }
 }
@@ -119,20 +132,29 @@ nav ul li a {
     justify-content: center;
     align-items: center;
     padding: 1%;
+    background-image: url(/resources/images/maps.jpg);
+    background-size: cover;
+
 }
+
 .img-box img {
     border-radius: 50%;
     border: 4px inset #FFFFFF;
     max-width: 350px;
     padding: 1%;
     box-shadow: -2px -3px 3px inset #272727;
+    z-index: 5;
+    opacity: 1;
 
 }
+
 .word-box {
     text-align: center;
     max-width: 350px;
+    z-index: 2;
 
 }
+
 
 @media only screen and (max-width: 768px) {
     .about {
@@ -145,88 +167,125 @@ nav ul li a {
 /* Projects */
 
 /* Mobile */
+.projects {
+    background-color: #062F4F;
+}
+
 .card-container {
-    max-width: 90%;
+
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: column nowrap;
-    margin: 5% auto;
+    margin: 0 auto;
     border-radius: 8px;
 }
 
 .card {
-    max-width: 95%;
-    margin: 5% auto;
-    box-shadow: 1px 2px 8px #215250;
+    height: 450px;
+    width: 350px;
+    margin: 20px auto;
+    box-shadow: 1px 2px 8px #813772;
+    transition: .5s ease-in-out;
     border-radius: 12px;
     padding: 2%;
+    position: relative;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; */
+}
+
+.card:hover {
+    box-shadow: 2px 3px 8px #EFA13A;
+    transition: .5s ease-in-out;
+}
+
+.card img {
+    width: 200px;
+}
+
+.card-body {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    /* position: relative; */
 }
 
-.card-text {
-    background-color: #f9faff;
-    text-align: center;
-    opacity: 1;
-    border-radius: 8px;
-    margin-top: 2%;
+
+.btn-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 10px;
 }
 
-button, .submit {
-    padding: 2%;
-    margin: 2%;
-    font-size: 1.2rem;
+button,
+.submit {
+    padding: 8px;
+    margin: 8px;
+    font-size: 1rem;
     border-radius: .5rem;
-    /* box-shadow: 1px 1px 5px ##FFFFFF; */
+    box-shadow: 1px 1px 5px #FFFFFF;
     color: #FFFFFF;
 }
 
 .link {
     background-color: #ED8332;
-    border: 1px solid #2c1d07;
-    box-shadow: 1px 1px 4px #EFA13A;
+    border: 1px solid #272727;
+    box-shadow: 1px 1px 4px #272727;
+    transition: .5s ease-in-out;
 }
 
 .code {
-    background-color: #215250;
-    border: 1px solid #282714;
-    box-shadow: 1px 1px 4px #1E3C3C;
+    background-color: #B82601;
+    border: 1px solid #272727;
+    box-shadow: 1px 1px 4px #272727;
+    transition: .5s ease-in-out;
+
+}
+.link:hover, .code:hover {
+    box-shadow: 1px 1px 4px #f0d6d0;
+    transition: .5s ease-in-out;
+
 }
 
-.link:disabled {
+
+/* .link:disabled {
     background-color: rgba(146, 95, 23, );
     opacity: .3;
-}
+} */
 
 img {
-    border-radius: 8px;
-    box-shadow: 1px 1px 5px #215250;
-    width: 350px;
+    border-radius: 5px;
+
 }
 
-h2, label {
-    text-align: center;
+h4 {
+    font-size: 24px;
     font-family: 'Eczar', serif;
-    font-size: 1.4rem;
-    text-shadow: 1px 1px 2px #6E6E6E;
+    margin-top: 5px;
 }
 
 p {
-    max-width: 400px;
+    padding: 0 10px;
+    position: absolute;
+    bottom: 100px;
 }
 
 /* Desktop */
-/* card-container> card> img, card-text> h4, p, btn-box>link, code */
 
 @media screen and (min-width: 769px) {
     .card-container {
         flex-flow: row wrap;
     }
+
     .card {
         width: 275px;
     }
+
     img {
         width: 250px;
     }
@@ -234,8 +293,10 @@ p {
 
 
 /* Contact */
+.form-box {
+    background-color: #813772;
+}
 @media screen and (min-width: 769px) {
-
     .input {
         max-width: 500px;
     }
@@ -248,35 +309,40 @@ p {
     flex-direction: column;
     width: 95%;
 }
+
 label {
-    font-size: 1rem;
+    text-align: center;
+    font-family: 'Eczar', serif;
+    font-size: 1.4rem;
+    text-shadow: 1px 1px 2px #272727;
+    padding-top: 5px;
 }
+
 .input {
     width: 80%;
     padding: 1%;
     border-radius: 8px;
-    border: 1px solid;
+    border: 1px solid #272727;
     margin: 1%;
     box-shadow: 1px 2px 8px #272727;
 }
+
 .submit {
-    background-color: #215250;
+    background-color: #B82601;
     padding: 1%;
-    box-shadow: 1px 2px 8px #215250;
+    box-shadow: 1px 2px 8px #272727;
 }
-.submit:active {
 
-}
-.submit:hover {
+.submit:active {}
 
-}
+.submit:hover {}
 
 
 /* Footer */
 footer {
     width: 100%;
-    height: 4rem;
-    background-color: #f4b551;
+    height: 200px;
+    background-color: #000000;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -285,5 +351,5 @@ footer {
 footer a {
     margin: .5rem;
     border-radius: 5px;
-    color: red;
+    color: #FFFFFF;
 }
